test/io/fsouza/chown/permission_error.good
permission_error.chpl:2: error: SYS_ERR in chown with path "file.txt"
